request and request update

--- a/AceChat/src/main/resources/application.properties
+++ b/AceChat/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=${acechat}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
