--- a/AceChat/src/main/resources/application.properties
+++ b/AceChat/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mariadb://database-1.cjqzd8t37lba.us-east-1.rds.amazonaws.com:3306/acechat
+spring.datasource.url=jdbc:mysql://database-1.cxcz48c9oz09.us-east-2.rds.amazonaws.com:3306/project2?useSSL=false
 spring.datasource.username=admin
-spring.datasource.password=Rev2021!
+spring.datasource.password=Rasputin.2
 
 
 spring.jpa.hibernate.ddl-auto=validate
