--- a/AceChat/src/main/webapp/WEB-INF/web.xml
+++ b/AceChat/src/main/webapp/WEB-INF/web.xml
@@ -20,5 +20,17 @@
 	<param-value>/WEB-INF/applicationContext.xml</param-value>
 </context-param>
 
-	
+	<servlet>
+		<servlet-name>DispatcherServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/dispatcherContext.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+<servlet-mapping>
+	<servlet-name>DispatcherServlet</servlet-name>
+	<url-pattern>/</url-pattern>
+</servlet-mapping>
 </web-app>
